--- a/apps/care-hub/tsconfig.json
+++ b/apps/care-hub/tsconfig.json
@@ -36,7 +36,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "out/types/**/*.ts",
-    "out/dev/types/**/*.ts"
+    "out/dev/types/**/*.ts",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
