--- a/apps/care-hub/package.json
+++ b/apps/care-hub/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "next": "16.1.5",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
-
+    "react-dom": "19.2.3",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5.3.3"
   }
 }
